--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" type="text/css" href="css_files/index.css">
     <link rel="stylesheet" type="text/css" href="css_files/slideshow.css">
     <link rel="stylesheet" type="text/css" href="css_files/calendar.css">
-    
+  
     <!--- HAMBURGER BUTTON -->
     <link href="hamburgers-master/dist/hamburgers.css" rel="stylesheet">
 
@@ -120,7 +120,7 @@
                 <table>
                     <hr> <!--adds seperation line-->
                     <tr>
-                        <a target="_blank" href="https://www.facebook.com/WIMatUCB?ref=br_tf"> <img src="images/ico_facebook.png" alt="Find us on Facebook"></a>
+                        <a target="_blank" href="https://www.facebook.com/WIMatUCB?ref=br_tf"> <img src="https://wim-web-dev.github.io/images/ico_facebook.png" alt="Find us on Facebook"></a>
                     </tr>
                     <tr>
                         <p>Copyright © 2018 Women in Mathematics at Berkeley.<br />
