fix img src for facebook

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <table>
                     <hr> <!--adds seperation line-->
                     <tr>
-                        <a target="_blank" href="https://www.facebook.com/WIMatUCB?ref=br_tf"> <img src="https://wim-web-dev.github.io/images/ico_facebook.png" alt="Find us on Facebook"></a>
+                        <a target="_blank" href="https://www.facebook.com/WIMatUCB?ref=br_tf"> <img src="images/ico_facebook.png" alt="Find us on Facebook"></a>
                     </tr>
                     <tr>
                         <p>Copyright © 2018 Women in Mathematics at Berkeley.<br />
