--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               <div class="item active"> <!--this div is used to resize all images so height doesnt change 
                 throughout slideshow-->
               <div class="slide_images fade">
-                <img src="images/dog1.png">
+                <img src="images/img1.jpg">
                 <!--<div class="text">Caption Text</div>-->
               </div>
 
